---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2025-04-18
  Features:
    - Added gas power station
    - Added japanese localization thanks to Snow Note
  Changes:
    - Updated some building icons
  Compatibility:
    - Fix for generating icons for venting fluids when using multiple mods thanks to Andromeda
---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2025-04-11
  Features:
    - Added freezing and thawing recipes
    - Added recipes for creating spoilage
    - Added locale for subgroups and categories
  Changes:
    - Herbarium requires nutrients just like biochamber
    - Updated natric acid recipe chain
  Bugfixes:
    - Fixed algae-spore recipe
    - Fixed agricultural science pack recipe
    - Nitric acid can now be crafted in the advanced chemical plant
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025-04-04
  Features:
    - New biological / agricultural tech tree
    - Added herbarium
    - Added CN locale thanks to rlcyyg1108
  Changes:
    - Updated woodfarming icon
    - Renamed krastorio bio lab to genetics facility
    - Renamed gyro to gyroscope
    - Pressure tube now also requires seal
    - Updated gun turret recipe
  Balancing:
    - Increased fuel values by 5
    - Increased energy production by 5 or more of all power generation buildings
    - Inserters require less energy
    - Magazines and shotgun shells do now much more damage
    - Weapon damage and shooting speed technologies have many more tiers and provide stronger bonuses
    - I intend to add more military balancing in the future (for now firearms are op compared to anything else)
  Bugfixes:
    - Enriching crushed iron ore now correctly produces enriched iron
    - Carbon fiber can be now produced in chemical plant