@@ -27,7 +27,15 @@ data:extend({
         pipe_covers = pipecoverspictures(),
         volume = 1000,
         pipe_connections = {
-          {flow_direction="input", direction = defines.direction.west, position = {-3, 0}},
+          {flow_direction="input", direction = defines.direction.west, position = {-3, 0}}
+        },
+      },
+      {
+        production_type = "input",
+        pipe_picture = sp_kr_pipe_path,
+        pipe_covers = pipecoverspictures(),
+        volume = 1000,
+        pipe_connections = {
           {flow_direction="input", direction = defines.direction.north, position = {0, -3}}
         },
       },
@@ -38,7 +46,15 @@ data:extend({
         pipe_covers = pipecoverspictures(),
         volume = 1000,
         pipe_connections = {
-          {flow_direction="output", direction = defines.direction.east, position = {3, 0}},
+          {flow_direction="output", direction = defines.direction.east, position = {3, 0}}
+        },
+      },
+      {
+        production_type = "output",
+        pipe_picture = sp_kr_pipe_path,
+        pipe_covers = pipecoverspictures(),
+        volume = 1000,
+        pipe_connections = {
           {flow_direction="output", direction = defines.direction.south, position = {0, 3}}
         },
       },
@@ -110,6 +126,11 @@ data:extend({
 
     energy_usage = "225kW",
     module_slots = 4,
+      icon_draw_specification = {scale = 2.5, shift = {0, 0.0}},
+    icons_positioning =
+    {
+      {inventory_index = defines.inventory.assembling_machine_modules, shift = {0, 1.25}}
+    },
     allowed_effects = { "consumption", "speed", "productivity", "pollution" },
   },
 })
