@@ -271,9 +271,9 @@ end
 
 function data_util.create_freezing_recipe_icon(item)
   icons = {
-    {icon = item.icon, icon_size = item.icon_size, scale = 1.5, shift = {-20, -20}},
-    {icon = "__Spaghetorio__/graphics/overlay/ice.png", icon_size = 64, scale = 1.5, shift = {20, 20}},
-    {icon = "__Spaghetorio__/graphics/arrows/freezing-arrow-256x256.png", icon_size = 256, scale = 0.4},
+    {icon = item.icon, icon_size = item.icon_size, scale = 0.7, shift = {-12, -12}},
+    {icon = "__Spaghetorio__/graphics/overlay/ice.png", icon_size = 64, scale = 0.7, shift = {8, 8}},
+    {icon = "__Spaghetorio__/graphics/arrows/freezing-arrow-64x64.png", icon_size = 64, scale = 1},
   }
 
   return icons
@@ -281,9 +281,9 @@ end
 
 function data_util.create_thawing_recipe_icon(item)
   icons = {
-    {icon = "__Spaghetorio__/graphics/overlay/ice.png", icon_size = 64, scale = 1.5, shift = {-20, -20}},
-    {icon = item.icon, icon_size = item.icon_size, scale = 1.5, shift = {20, 20}},
-    {icon = "__Spaghetorio__/graphics/arrows/thawing-arrow-256x256.png", icon_size = 256, scale = 0.4},
+    {icon = "__Spaghetorio__/graphics/overlay/ice.png", icon_size = 64, scale = 0.7, shift = {-12, -12}},
+    {icon = item.icon, icon_size = item.icon_size, scale = 0.7, shift = {8, 8}},
+    {icon = "__Spaghetorio__/graphics/arrows/thawing-arrow-64x64.png", icon_size = 64, scale = 1},
   }
 
   return icons
@@ -291,9 +291,9 @@ end
 
 function data_util.create_spoiling_recipe_icon(item)
   icons = {
-    {icon = item.icon, icon_size = item.icon_size, scale = 1.5, shift = {-20, -20}},
-    {icon = "__space-age__/graphics/icons/spoilage.png", icon_size = 64, scale = 1.5, shift = {20, 20}},
-    {icon = "__Spaghetorio__/graphics/arrows/crushing-arrow-256x256.png", icon_size = 256, scale = 0.4},
+    {icon = item.icon, icon_size = item.icon_size, scale = 0.7, shift = {-12, -12}},
+    {icon = "__space-age__/graphics/icons/spoilage.png", icon_size = 64, scale = 0.7, shift = {8, 8}},
+    {icon = "__Spaghetorio__/graphics/arrows/crushing-arrow-64x64.png", icon_size = 64, scale = 1},
   }
 
   return icons
